# detours-rs

./: Cargo.toml  README.md
src/: detours.rs  error.rs  ext.rs  inst.rs  lib.rs  mem.rs
src/disassembly/: mod.rs
src/mem/: mod.rs
src/platform/: comm.rs  mod.rs  unimpl.rs  win.rs  windows.rs  x86.rs
