[package]
name = "detours-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = "1.21.0"
hex = "0.4.3"
fnv = "1.0.7"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]
